--- a/2022.html
+++ b/2022.html
@@ -3782,7 +3782,198 @@ style='font-size:12.0pt;font-family:"Times New Roman",serif'>&nbsp;</span></p>
   </td>
  </tr>
 </table>
+
+<br>
+<p class=MsoNormal><span class=nc684nl6><b><u><span style='color:white'>publikované
+na facebooku 30.11.2022</span></u></b></span></p>	
 	
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>
+🏞️ 🌿  🍃  🍂🍁 💦Dnes som zbieral odpadky zo začiatku malého jazera, z jedného miesta pri vode. 💦 Na tomto mieste som predtým ešte nikdy nezbieral. Bolo tam veľa popadaného lístia  🍂🍁a v ňom zamiešané odpadky. 
+</span></p>
+<br>	
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>
+🚶🧹🗑️ Vyzbieral som kríky na brehu a čo sa mi podarilo dosiahnuť aj z vody.  K niektorým odpadkom vo vode som sa dostal chodiac po padnutom brvne 🙂 Okrem obalov, pohárika a staršej plechovky som z vody vytiahol aj rybársky vlasec namotaný na palici.🎣 
+</span></p>
+<br>	
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>
+🧴Veľa starších kúskov vytŕčalo z brehu ako napr. stará tuba z Indulóny-Herbasept (cena 5 Kčs). Z brehu trčala aj veľká guma a zhrdzavené lano, ktoré som bohužiaľ dnes nedokázal vytiahnuť. 
+Na brehu som našiel aj fľaštičku s trochou voňavky, poháre zo zavináčov, rozhryzenú 🐕loptičku, pásku zákaz vstupu, cyklistickú fľašu, ZIP sáčok, prasknutý balónik, fajčiarsky odpad, vínové fľaše, sáčky a obaly atď.💚🏞️🚮♻
+</span></p>
+<br>	
+<p class=MsoNormal>	
+#indulona #retro #herbasept #cunovskejazera #malejazero #jazero #jazera #ostrovnelucky #bezodpadkov #odpadky #bezodpadu #neporiadok #bordel #rybarskyodpad #smeti #cistapriroda #priroda #cunovo #rusovce #bratislava #luznelesy #slovensko #tráva #výrastkovia #cistavoda #zberodpadkov #plasty #upratovanie
+</p>
+	
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span
+style='font-size:12.0pt;font-family:"Times New Roman",serif'>&nbsp;</span></p>
+
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2022L/image369.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2022/image369.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image370.jpg" target="_blank">
+	<img height=200 id="Obrázok 28" src="2022/image370.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2022L/image371.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2022/image371.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image372.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image372.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image373.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image373.jpg"></a></p>
+  </td>
+ </tr>
+
+ <tr>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>začiatok malého Čunovského jazera</p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>&nbsp;</p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>&nbsp;</p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>miesto dnešného zberu</p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>miesto dnešného zberu</p>
+  </td>
+ </tr>
+</table>
+
+<br>
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2022L/image374.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2022/image374.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image375.jpg" target="_blank">
+	<img height=200 id="Obrázok 28" src="2022/image375.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2022L/image376.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2022/image376.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image377.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image377.jpg"></a></p>
+  </td>
+ </tr>
+
+ <tr>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>retro Indulóna HERBASEPT ČSSR <br>cena 5 Korún KCS, vytŕčala z brehu</p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>retro Indulóna HERBASEPT ČSSR <br>cena 5 Korún KCS, vytŕčala z brehu</p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>ešte stará nezálohovaná</p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>&nbsp;</p>
+  </td>
+ </tr>
+</table>
+<br>
+
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image378.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image378.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2022L/image379.jpg" target="_blank">
+    <img align="left" height=200 id="Obrázok 27" src="2022/image379.jpg"></a>
+    padnutý strom <br>po ktorom som<br> chodil, v zadu <br>vo vode pri brehu je vidieť, modrý pohárik</p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image380.jpg" target="_blank">
+	<img align="left" height=200 id="Obrázok 28" src="2022/image380.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2022L/image381.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2022/image381.jpg"></a></p>
+  </td>
+ </tr>
+
+ <tr>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>&nbsp;</p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>&nbsp;</p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>túto gumu sa mi dnes<br> nepodarilo vytiahnuť <br>z brehu</p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>&nbsp;</p>
+  </td>
+ </tr>
+</table>
+
+<tr>
+<br>
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image382.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image382.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image383.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image383.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2022L/image384.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2022/image384.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image385.jpg" target="_blank">
+	<img height=200 id="Obrázok 28" src="2022/image385.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2022L/image386.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2022/image386.jpg"></a></p>
+  </td>
+ </tr>
+
+ <tr>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>silón a časť ochranného plastového<br>oplotenia proti ohryzu bobrami</p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>flakón s trochou voňavky<br>na dne a balónik</p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>v jednom ostala ešte cibula</p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>&nbsp;</p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>&nbsp;</p>
+  </td>
+ </tr>
+</table>
+
 	
 
 
