--- a/2022.html
+++ b/2022.html
@@ -3975,6 +3975,179 @@ style='font-size:12.0pt;font-family:"Times New Roman",serif'>&nbsp;</span></p>
 </table>
 
 	
+<br>
+<p class=MsoNormal><span class=nc684nl6><b><u><span style='color:white'>publikované
+na facebooku 7.9.2022</span></u></b></span></p>	
+	
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>
+🏃🏃🏃🌛🌃Utečenci na Čunovských?💦💦 Je to možné? 🤔 <br><br>
+Áno oblasťou Čunovských jazier putujú často za tmy utečenci. Nič zvláštne veď  3 km odtiaľto je štátna hranica s Rakúskom.  🇦🇹<br><br>
+A to možno vysvetľuje aj niektoré z tých zvláštnych odpadkov, nad ktorými sa mi niekedy rozum pozastavuje. 🤔<br><br>
+ 🚰💤🔥🍔🛀Pri jazerách si pravdepodobne oddýchnu, najedia sa, urobia si hygienu a utekajú ďalej. 🏃🏃🏃<br><br>
+Alebo sa mýlim a jazerá nedávno navštívili putujúci turisti zo Srbska? 🚶🇷🇸<br><br>
+🚶🧹🗑️Odpadky, ktoré som dnes pri malom jazere pozbieral tam ležali už dlhšie. 🔥Ohnisko v strede cestičky a okolo neho boli vyhodené 🥫konzervy a obal zo sušených marhúľ 🍑s nápismi v Srbochorvátčine . 🐟🥫Konzervy z Bulharska🇧🇬, 🍑marhule z Turecka 🇹🇷,  výrobky kúpené v Srbskom obchode.  🇷🇸<br><br>
+🥾🧦👖Porozhadzované tam boli aj nepremokavé návleky na topánky, ponožky, ošúchané boty, oblečenie, sáčky,  vytrhnuté syntetické chumáče (z vetrovky či spacáku) atď.<br><br>
+🚶🧹🗑️🏞️Potom som sa presunul k veľkému jazeru a pozbieral som nejaké odpadky z južného brehu a kríkov. Ponachádzal som starý šrobovák, syntetické servítky, obaly a PET uzávery, svietnik, alobal atď.<br><br>
+🚶🧹🗑️Keď som to všetko pobalil, v ťažko dostupnom kríku nad jazerom som zbadal ďalší odpad. Bola tam pokrčená Z plechovka, plastový pohár, kúsok silónu, obaly a sáčok.  🚮♻<br><br>
+🧪Prekvapila ma fľaška s nejakým svietiaco-zeleným ekrazitom. 🧪Bola v nej nejaká tekutá aróma-ananásová vôňa, rybári to miešajú do krmiva a hádžu do vody.  🎣🐟🦠🧪💦<br><br>
+💚🏞️🚮♻
+</span></p>
+<br>	
+<p class=MsoNormal>	
+#utečenci #cunovskejazera #malejazero #jazero #jazera #ostrovnelucky #bezodpadkov #odpadky #bezodpadu #neporiadok #bordel #rybarskyodpad #smeti #cistapriroda #priroda #cunovo #rusovce #bratislava #luznelesy #slovensko #cistavoda #zberodpadkov #plasty #upratovanie
+</p>
+	
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span
+style='font-size:12.0pt;font-family:"Times New Roman",serif'>&nbsp;</span></p>
+
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2022L/image387.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2022/image387.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image388.jpg" target="_blank">
+	<img height=200 id="Obrázok 28" src="2022/image388.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2022L/image389.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2022/image389.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image390.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image390.jpg"></a></p>
+  </td>
+ </tr>
+
+</table>
+<br>
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image391.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image391.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image392.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image392.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image393.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image393.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image394.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image394.jpg"></a></p>
+  </td>
+
+ </tr>
+
+</table>
+
+<br>
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image395.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image395.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image396.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image396.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image397.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image397.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image398.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image398.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image399.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image399.jpg"></a></p>
+  </td>
+ </tr>
+</table>
+
+<br>
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image400.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image400.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image401.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image401.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image402.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image402.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image403.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image403.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image404.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image404.jpg"></a></p>
+  </td>
+ </tr>
+</table>
+
+<br>
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image405.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image405.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image406.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image406.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image407.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image407.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image408.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image408.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image409.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image409.jpg"></a></p>
+  </td>
+ </tr>
+</table>
+
+<br>
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image410.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image410.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image411.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image411.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image412.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image412.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2022L/image413.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2022/image413.jpg"></a></p>
+  </td>
+ </tr>
+</table>
+
+	
 
 
 </div>
