--- a/2023.html
+++ b/2023.html
@@ -633,7 +633,7 @@ Nejaký bordel sa mi podarilo vytiahnuť aj z brehu pri jazere. Z vody som vytia
   <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'></p>
   </td>
   <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
-  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> </p>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>🐶</p>
   </td>
   <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
   <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'></p>
