--- a/2023.html
+++ b/2023.html
@@ -1058,6 +1058,245 @@ na facebooku 24.03.2023</span></u></b></span></p>
  </tr>
 </table>
 
+<br><br>
+
+
+<p class=MsoNormal><span class=nc684nl6><b><u><span style='color:white'>publikované
+na facebooku 03.04.2023</span></u></b></span></p>	
+	
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>
+🌦️🏞️ 🌧️Včera na jazerách bolo premenlivé počasie. ☁️Zamračené a dážď 🌧️🌦️ale miestami spoza oblakov vykuklo aj slniečko⛅🌤️💧
+<br><br>
+🌿Jar je už v plnom prúde, všade plno kvetov 🌸💐 🌷 a niektorí obyvatelia jazier 🦤🐦si už začínajú stavať hniezda.🪹🪺
+<br><br>
+Pri zbere odpadkov, som našiel jedno staré 🪹 padnuté. 🪺 Do tohoto 🪺 si jeho tvorca🐦 zakomponoval okrem hliny a trávy aj igelit, silón a špagátiky.🎉🧵🌾
+<br><br>
+🚶☔ 🧹🌂🗑️ Keď som zbieral odpadky pršalo iba slabo ale keď som ich fotil spustil sa silný dážď. 🌧️ Pozbieral som odpadky z časti brehov veľkého jazera hlavne pri asfaltke. Z brehov zo zeme som vytiahol igelit a PET Crazy Wolf. Pozbieral som ešte polystyrén, obaly z cukríkov, vlasec, špaky, plechovku. mikrotén, časť bike duše a kadejaký iný odpad.  💚🚮
+<br><br>
+🛠️🪛✂Niekto si začal pomaličky a nebadane upravovať jedno miesto pri veľkom jazere. Vyklčoval tam kríky a rákosie. 🌿Keby som tam včera netrávil čas ani by som to nezbadal. 👀🔎🌳
+<br><br>
+⛓️🔗🌳Hore na vysoký topoľ o konáre pripevnil dve obruče 🪝🔗a z nich zvesil dve kovové lanká. ⛓️Na čo to malo slúžiť neviem. (pravdepodobne záves na prístrešok⛺⛓️🎪) Časť z tohto diela som včera odstraňoval .🪜🪛🌳💚♻
+</span></p>
+<br>
+<p class=MsoNormal>	
+#cunovskejazera #velkejazero #jazera #ostrovnelucky #bezodpadkov #odpadky #bezodpadu #neporiadok #bordel #rybarskyodpad #smeti #cistapriroda #priroda #cunovo #rusovce #bratislava #luznelesy #slovensko #cistavoda #zberodpadkov #plasty #upratovanie
+</p>
+
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2023L/image104.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2023/image104.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2023L/image105.jpg" target="_blank">
+	<img height=200 id="Obrázok 28" src="2023/image105.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image106.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image106.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2023L/image107.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2023/image107.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2023L/image108.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2023/image108.jpg"></a></p>
+  </td>
+ </tr>
+</table>
+
+<br>
+
+
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2023L/image109.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2023/image109.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2023L/image110.jpg" target="_blank">
+	<img height=200 id="Obrázok 28" src="2023/image110.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image111.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image111.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2023L/image112.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2023/image112.jpg"></a></p>
+  </td>
+ </tr>
+
+ <tr>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'></p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>&nbsp;</p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>nevratné...crazy wolf bol zahrabaný v brehu,<br> vytŕčal iba uzáver, dážď ho takto umyl</p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>na časti duši od bicykla bola aj záplata aj zámotok...</p>
+  </td>
+ </tr>
+</table>
+
+
+
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2023L/image113.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2023/image113.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2023L/image114.jpg" target="_blank">
+	<img height=200 id="Obrázok 28" src="2023/image114.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image115.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image115.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2023L/image116.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2023/image116.jpg"></a></p>
+  </td>
+ </tr>
+
+ <tr>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'></p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>fuj...</p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>prvé pozbierané smeti...<br>z brehu vytŕčal aj takýto zvetraný igelit...</p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>staré spadnuté hniezdo (pravdepodobne drozd),<br>spodok - hlina s igelitom, vrch-tráva a korienky<br> so silonom a špagátikmi</p>
+  </td>
+ </tr>
+</table>
+
+
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2023L/image117.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2023/image117.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2023L/image118.jpg" target="_blank">
+	<img height=200 id="Obrázok 28" src="2023/image118.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image119.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image119.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2023L/image120.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2023/image120.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2023L/image121.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2023/image121.jpg"></a></p>
+  </td>
+
+ </tr>
+
+ <tr>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt' colspan="3">
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>niekto vyliezol vysoko na topoľ aby tam nainštaloval obruče</p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>odstránené lanká a skoby</p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>odstránené lanká a skoby</p>
+  </td>
+ </tr>
+</table>
+
+
+
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2023L/image122.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2023/image122.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2023L/image123.jpg" target="_blank">
+	<img height=200 id="Obrázok 28" src="2023/image123.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image124.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image124.jpg"></a></p>
+  </td>
+
+ </tr>
+
+ <tr>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'></p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>výhľad z hora zo stromu</p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'></p>
+  </td>
+ </tr>
+</table>
+
+
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2023L/image125.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2023/image125.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2023L/image126.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2023/image126.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2023L/image127.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2023/image127.jpg"></a></p>
+  </td>
+ </tr>
+
+ <tr>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'></p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'></p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'></p>
+  </td>
+ </tr>
+</table>
+
+
+<br>
+<br>
+<br>
+<br>
+	
+	
+	
+	
+	
+	
+	
 </div>
 </body>
 </html>
